--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,154 +19,152 @@ jobs:
     steps:
       - id: prepare
         run: |
-          echo "::set-output name=short_sha::${GITHUB_SHA::7}"
+          echo "short_sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-  deploy-dev:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
-    needs:
-      - prepare-env
-    environment:
-      name: dev
-    env:
-      SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          pip install --user openshift
-      - name: Deploy dev environment
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: playbooks/deploy.yml
-          directory: ./ansible
-          requirements: playbooks/requirements.yml
-          vault_password: ${{secrets.VAULT_PASSWORD}}
-          options: |
-            --inventory inventory/operator-pipeline-dev
-            --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
-            --skip-tags ci
-            --verbose
+  # deploy-dev:
+  #   runs-on: ubuntu-latest
+  #   if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+  #   needs:
+  #     - prepare-env
+  #   environment:
+  #     name: dev
+  #   env:
+  #     SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         pip install --user openshift
+  #     - name: Deploy dev environment
+  #       uses: dawidd6/action-ansible-playbook@v2
+  #       with:
+  #         playbook: playbooks/deploy.yml
+  #         directory: ./ansible
+  #         requirements: playbooks/requirements.yml
+  #         vault_password: ${{secrets.VAULT_PASSWORD}}
+  #         options: |
+  #           --inventory inventory/operator-pipeline-dev
+  #           --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
+  #           --skip-tags ci
+  #           --verbose
 
-  deploy-qa:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
-    needs:
-      - prepare-env
-    environment:
-      name: qa
-    env:
-      SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          pip install --user openshift
-      - name: Deploy qa environment
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: playbooks/deploy.yml
-          directory: ./ansible
-          requirements: playbooks/requirements.yml
-          vault_password: ${{secrets.VAULT_PASSWORD}}
-          options: |
-            --inventory inventory/operator-pipeline-qa
-            --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
-            --skip-tags ci
-            --verbose
+  # deploy-qa:
+  #   runs-on: ubuntu-latest
+  #   if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+  #   needs:
+  #     - prepare-env
+  #   environment:
+  #     name: qa
+  #   env:
+  #     SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         pip install --user openshift
+  #     - name: Deploy qa environment
+  #       uses: dawidd6/action-ansible-playbook@v2
+  #       with:
+  #         playbook: playbooks/deploy.yml
+  #         directory: ./ansible
+  #         requirements: playbooks/requirements.yml
+  #         vault_password: ${{secrets.VAULT_PASSWORD}}
+  #         options: |
+  #           --inventory inventory/operator-pipeline-qa
+  #           --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
+  #           --skip-tags ci
+  #           --verbose
 
-  deploy-stage:
-    runs-on: ubuntu-latest
-    environment:
-      name: stage
-    env:
-      SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
-    needs:
-      - prepare-env
-      - deploy-qa
-      - deploy-dev
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          pip install --user openshift
-      - name: Deploy stage environment
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: playbooks/deploy.yml
-          directory: ./ansible
-          requirements: playbooks/requirements.yml
-          vault_password: ${{secrets.VAULT_PASSWORD}}
-          options: |
-            --inventory inventory/operator-pipeline-stage
-            --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
-            --skip-tags ci
-            --verbose
+  # deploy-stage:
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: stage
+  #   env:
+  #     SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
+  #   needs:
+  #     - prepare-env
+  #     - deploy-qa
+  #     - deploy-dev
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         pip install --user openshift
+  #     - name: Deploy stage environment
+  #       uses: dawidd6/action-ansible-playbook@v2
+  #       with:
+  #         playbook: playbooks/deploy.yml
+  #         directory: ./ansible
+  #         requirements: playbooks/requirements.yml
+  #         vault_password: ${{secrets.VAULT_PASSWORD}}
+  #         options: |
+  #           --inventory inventory/operator-pipeline-stage
+  #           --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
+  #           --skip-tags ci
+  #           --verbose
 
-  deploy-prod:
-    runs-on: ubuntu-latest
-    environment:
-      name: prod
-    env:
-      SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
-    needs:
-      - prepare-env
-      - deploy-stage
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          pip install --user openshift
-      - name: Deploy prod environment
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: playbooks/deploy.yml
-          directory: ./ansible
-          requirements: playbooks/requirements.yml
-          vault_password: ${{secrets.VAULT_PASSWORD_PROD}}
-          options: |
-            --inventory inventory/operator-pipeline-prod
-            --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
-            --skip-tags ci
-            --verbose
+  # deploy-prod:
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: prod
+  #   env:
+  #     SHORT_SHA: ${{needs.prepare-env.outputs.short_sha}}
+  #   needs:
+  #     - prepare-env
+  #     - deploy-stage
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         pip install --user openshift
+  #     - name: Deploy prod environment
+  #       uses: dawidd6/action-ansible-playbook@v2
+  #       with:
+  #         playbook: playbooks/deploy.yml
+  #         directory: ./ansible
+  #         requirements: playbooks/requirements.yml
+  #         vault_password: ${{secrets.VAULT_PASSWORD_PROD}}
+  #         options: |
+  #           --inventory inventory/operator-pipeline-prod
+  #           --extra-vars "operator_pipeline_image_tag=${{ github.sha }} suffix=${{needs.prepare-env.outputs.short_sha}}"
+  #           --skip-tags ci
+  #           --verbose
 
   release:
     name: Github release
     runs-on: ubuntu-latest
     needs:
-      - deploy-prod
+      - prepare-env
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Bump version and push tag
         id: tag_version
-        uses: mathieudutour/github-tag-action@v5.6
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a GitHub release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          token: ${{ secrets.PERSONAL_TOKEN }}
+          name: ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
 
-      - name: Log in to Quay.io
-        uses: redhat-actions/podman-login@v1
-        with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-          registry: quay.io
+      # - name: Log in to Quay.io
+      #   uses: redhat-actions/podman-login@v1
+      #   with:
+      #     username: ${{ secrets.REGISTRY_USERNAME }}
+      #     password: ${{ secrets.REGISTRY_PASSWORD }}
+      #     registry: quay.io
 
-      - name: Tag image with a release tag
-        run: |
+      # - name: Tag image with a release tag
+      #   run: |
 
-          podman pull quay.io/redhat-isv/operator-pipelines-images:${{ github.sha }}
+      #     podman pull quay.io/redhat-isv/operator-pipelines-images:${{ github.sha }}
 
-          podman tag quay.io/redhat-isv/operator-pipelines-images:${{ github.sha }} quay.io/redhat-isv/operator-pipelines-images:released
-          podman tag quay.io/redhat-isv/operator-pipelines-images:${{ github.sha }} quay.io/redhat-isv/operator-pipelines-images:${{ steps.tag_version.outputs.new_tag }}
+      #     podman tag quay.io/redhat-isv/operator-pipelines-images:${{ github.sha }} quay.io/redhat-isv/operator-pipelines-images:released
+      #     podman tag quay.io/redhat-isv/operator-pipelines-images:${{ github.sha }} quay.io/redhat-isv/operator-pipelines-images:${{ steps.tag_version.outputs.new_tag }}
 
-          podman push quay.io/redhat-isv/operator-pipelines-images:released
-          podman push quay.io/redhat-isv/operator-pipelines-images:${{ steps.tag_version.outputs.new_tag }}
+      #     podman push quay.io/redhat-isv/operator-pipelines-images:released
+      #     podman push quay.io/redhat-isv/operator-pipelines-images:${{ steps.tag_version.outputs.new_tag }}
