test release again

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -9,12 +9,12 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
 
 jobs:
-  tox:
-    name: Run unit tests and linters
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: fedora-python/tox-github-action@v0.4
-        with:
-          tox_env: black,test,yamllint
-          dnf_install: krb5-devel krb5-workstation
+  # tox:
+  #   name: Run unit tests and linters
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: fedora-python/tox-github-action@v0.4
+  #       with:
+  #         tox_env: black,test,yamllint
+  #         dnf_install: krb5-devel krb5-workstation
