--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -12,9 +12,9 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
 
 jobs:
-  # build:
-  #   name: Build and push image
-  #   runs-on: ubuntu-latest
+  build:
+    name: Build and push image
+    runs-on: ubuntu-latest
 
   #   if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
