--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -9,9 +9,9 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
 
 jobs:
-  # tox:
-  #   name: Run unit tests and linters
-  #   runs-on: ubuntu-latest
+  tox:
+    name: Run unit tests and linters
+    runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v2
   #     - uses: fedora-python/tox-github-action@v0.4
