--- a/.github/workflows/build-multi-arch-image.yml
+++ b/.github/workflows/build-multi-arch-image.yml
@@ -18,13 +18,13 @@ env:
   IMAGE_NAMESPACE: redhat-isv
 
 jobs:
-  # build-multiarch-images:
-  #   name: Build and push multi-architecture image
+  build-multiarch-images:
+    name: Build and push multi-architecture image
   #   strategy:
   #     matrix:
   #       architecture: [amd64, ppc64le, s390x, arm64]
   #       platform: [linux]
-  #   runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04
   #   steps:
   #     - name: add checkout action...
   #       uses: actions/checkout@v2
