--- a/.github/workflows/build-signing-bundle.yml
+++ b/.github/workflows/build-signing-bundle.yml
@@ -12,9 +12,9 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
 
 jobs:
-  # build:
-  #   name: Build and push signing bundle
-  #   runs-on: ubuntu-latest
+  build:
+    name: Build and push signing bundle
+    runs-on: ubuntu-latest
   #   outputs:
   #     bundle_image: ${{ steps.push-bundle.outputs.pullspec }}
 
