--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -12,8 +12,8 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
 
 jobs:
-  # run-integration-tests:
-  #   runs-on: ubuntu-latest
+  run-integration-tests:
+    runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v2
 
