--- a/.github/workflows/build-multi-arch-image.yml
+++ b/.github/workflows/build-multi-arch-image.yml
@@ -25,6 +25,9 @@ jobs:
   #       architecture: [amd64, ppc64le, s390x, arm64]
   #       platform: [linux]
     runs-on: ubuntu-20.04
+    steps:
+      - name: Do nothing
+        run: echo "This is an empty step"
   #   steps:
   #     - name: add checkout action...
   #       uses: actions/checkout@v2
