--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -146,8 +146,9 @@ jobs:
 
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
           name: ${{ steps.tag_version.outputs.new_tag }}
           tag: ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
